# fastapi-starter-template

./: .env.example  .gitignore  README.md  config.py  database.py  main.py  pyproject.toml  requirements.txt
app/database/: init_db.py
app/models/: item.py  user.py
app/repositories/: __init__.py  user_repository.py
app/routes/: auth.py  item.py
app/schemas/: item.py  user.py
app/services/: auth_service.py  user_service.py
tests/: conftest.py  test_user_repository.py
